--- a/latex/oppgave.tex
+++ b/latex/oppgave.tex
@@ -1,11 +1,13 @@
-\documentclass[10pt,b5report,twoside]{thesis}
+\documentclass[10pt,b5paper,twoside]{thesis}
 \usepackage{rotating}
 %\usepackage[english,norsk]{babel}
-
+%\usepackage[lmargin=25mm,rmargin=25mm,tmargin=27mm,bmargin=30mm]{geometry}
+\DeclareMathOperator{\argmax}{argmax\text{  }}
+\DeclareMathOperator{\argmin}{argmin\text{  }}
 \begin{document}
 
 \frontmatter
-\input{matter/front_page}
+%\input{matter/front_page}
 \input{matter/abstract}
 
 \cleardoublepage
