--- a/latex/matter/AmathProof.tex
+++ b/latex/matter/AmathProof.tex
@@ -1,10 +1,10 @@
-\chapter{Proofs of properties for the Newton Raphson updates}
+\chapter{Properties for the Newton Raphson Updates}
 
 This chapter will prove the properties used in section \ref{sect:deeperivect}. 
 
 %Due to the similarities in updating rows of $\mathbf{T}$ and iVectors we will here use a common notation when proofs apply to both updates. $\mathbf{x}$ will denote the updated vector (either a row of $\mathbf{T}$ or an iVector), $\mathbf{H}_x$ its (approximate) Hessian and $\mathbf{g}_x$ its gradient. We will use $\mathbf{y}$ to denote the vectors used to update $\mathbf{x}$ (iVectors if $\mathbf{x}$ is a row of $\mathbf{T}$ and vice versa). The Hessian from equation ?? and ?? is then written as
 
-\section{Proof of symmetri}
+\section{Proof of Symmetry}
 \label{symproof}
 
 From equation \ref{ivecthessian} we have
@@ -25,7 +25,7 @@ which concludes the proof that $\mathbf{H}_n$ is symmetric. A similar proof usin
 %\end{equation}
 
 
-\section{Conditions for positive definity and for nonsingularity}
+\section{Conditions for Positive Definity and for Nonsingularity}
 \label{posdefproof}
 We will here show the conditions for the Hessian of iVectors and rows of $\mathbf{T}$ being positive definite and nonsingular. A nonsingular matrix, $\mathbf{A}$ is a matrix that has one and only one solution to a linear system $\mathbf{Ax}=\mathbf{b}$ \cite[p. 54]{matte3}. Also $\mathbf{A}$ is positive definite if $\mathbf{x}^T\mathbf{Ax} > 0$ for all non-zero vectors $\mathbf{x}$ \cite[p. 246]{matte3}. When we apply this to the approximation to the Hessian from equation \ref{ivecthessian} we get
 
@@ -49,7 +49,7 @@ Equality in equation \ref{posdefEq} can only be reached if $\mathbf{x}$ is ortho
 
 With similar calculations as in equation \ref{posdefEq} we can show when $\mathbf{H}_c$ is nonsingular and positive definite. As with $\mathbf{\tilde{t}}_n$ we let $\mathbf{\tilde{w}}_c$ denote the set of iVectors that contribute (isn't multiplied with zero in equation \ref{thessian}) to $\mathbf{H}_c$. Given that we use the same set to train $\mathbf{m}$ and $\mathbf{T}$, $\gamma_{nc}$ can only be zero if $m_c$ is $-\infty$. So $\mathbf{\tilde{w}}_c$ is either all iVectors from the training set, or the empty set if $c$ is a feature that is not seen in the training set. For features found in the training set, this means that $\mathbf{H}_c$ will be nonsingular and positive definite if and only if all the i-vectors from the training set span all $R$ dimensions.
 
-\section{Likelihoods dependence on total variability matrix's column span}
+\section{Column Span of the Total Variability Matrix}
 \label{sect:orthproof}
 
 Given two total variability matrices, $\mathbf{T}$ and $\mathbf{\hat{T}}$, with the same column span, there will for any iVector $\mathbf{w}_n$ exist an iVector $\mathbf{\hat{w}}_n$ where 
@@ -60,7 +60,7 @@ Given two total variability matrices, $\mathbf{T}$ and $\mathbf{\hat{T}}$, with 
 \end{equation}
 This is because both sides of the equation will be a linear combinations of the column vectors of $\mathbf{T}$ or $\mathbf{\hat{T}}$ that share the same subspace. 
 
-We'll here show that if two iVectors satisfy equation \ref{colpropEq} using some total variability matrices with common column span, then the iVectors we get after a Newton Rapshon update will also satisfy equation \ref{colpropEq}. From equation \ref{phieq}, this will also imply that $\phi_{nc}$ and thereby the likelihood when using either of the total variability matrices with the corresponding iVectors will be equal before and after an update. By inserting equation \ref{ivectgrad} and \ref{ivecthessian}, the equations for the gradient and Hessian respectively, into equation \ref{lupeqN}, a Newton Rapshon update will then be
+We'll here show that if two iVectors satisfy equation \ref{colpropEq} using some total variability matrices with common column span, then the iVectors we get after a Newton Rapshon update will also satisfy equation \ref{colpropEq}. From equation \ref{phieq}, this will also imply that $\phi_{nc}$ and thereby the likelihood when using either of the total variability matrices with the corresponding iVectors will be equal before and after an update. By inserting equation \ref{ivectgrad} and \ref{ivecthessian}, the equations for the gradient and Hessian respectively, into equation \ref{lupeqN}, a Newton Raphson update will then be
 \begin{align}
 \sum_{c=1}^C b_{nc} \mathbf{t}_c \mathbf{t}_c^T(\mathbf{w}_n(\text{new})-\mathbf{w}_n(\text{old})) = \sum_{c=1}^C a_{nc} \mathbf{t}_c \nonumber \\
 \sum_{c=1}^C \left(b_{nc} \mathbf{t}_c \mathbf{t}_c^T(\mathbf{w}_n(\text{new})-\mathbf{w}_n(\text{old})) - a_{nc} \mathbf{t}_c\right) = 0 \label{longlupeq}
